--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,12 @@
 site_name: SharpLog
-site_url: https://example.com/
-repo_url: https://github.com/habetuz/SharpLog
+site_url: https://sharplog.marvin-fuchs.de/
+repo_url: https://github.com/habetuz/SharpLog/
+edit_uri: edit/main/docs/
 theme:
   features:
       - navigation.tabs
+      - navigation.top
+      - toc.integrate
   name: material
   palette:
     scheme: slate
@@ -11,12 +14,19 @@ theme:
     accent: light blue
   font:
     text: Montserrat
+    code: Roboto Mono
 markdown_extensions:
   - toc:
       permalink: true
   - meta
   - pymdownx.details
+  - attr_list
   - pymdownx.highlight:
-      linenums: true
+      linenums: false
   - pymdownx.superfences
   - pymdownx.inlinehilite
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+extra_css:
+  - stylesheets/extra.css
