--- a/SharpLog.csproj
+++ b/SharpLog.csproj
@@ -41,9 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Log.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="LoggerType.cs" />
+    <Compile Include="LogType.cs" />
+    <Compile Include="LogHandler.cs" />
     <Compile Include="MassLogger.cs" />
+    <Compile Include="Output\IOutput.cs" />
+    <Compile Include="Output\OutputConsole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
