--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<package >
+<package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>1.0.2</version>
+    <version>2.0.0</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -12,8 +12,14 @@
     <description>A small logger for big projects</description>
     <releaseNotes>
       Change:
-      ~ MassLogger: Default for "logPause" in constructor.
-      ~ MassLogger: Collapse the two log functions into one universal.
+      ~ Logger: Accept 'object' instead of 'string' for logging.
+      ~ MassLogger: Accept 'object' instead of 'string' for logging.
+      ~ Renaming enum LoggerType to LogType
+
+      Add:
+      + Colored terminal logs
+      + Flexible output system through the IOutput interface
+      + Active log levels get saved as flags
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
