--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>2.0.0</version>
+    <version>2.1.0</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,15 +11,9 @@
     <repository type="git" url="https://github.com/habetuz/SharpLog" branch="master"/>
     <description>A small logger for big projects</description>
     <releaseNotes>
-      Change:
-      ~ Logger: Accept 'object' instead of 'string' for logging.
-      ~ MassLogger: Accept 'object' instead of 'string' for logging.
-      ~ Renaming enum LoggerType to LogType
-
       Add:
-      + Colored terminal logs
-      + Flexible output system through the IOutput interface
-      + Active log levels get saved as flags
+      + Better number formatting for the MassLogger
+      + Async FileOutput for logger
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
