--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,5 +28,8 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+plugins:
+  - search
+  - autolinks
 extra_css:
   - stylesheets/extra.css
