--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>2.3.0</version>
+    <version>2.4.0</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -12,12 +12,13 @@
     <description>A small logger for big projects</description>
     <releaseNotes>
       Change:
-      ~ SharpLog now loggs asynchronously
-      
-      Add:
-      + The possibility to restrict outputs to only some `LogType`'s
+      - dependencies
+      - `IOutputs` differentiate between instant and non-instant outputs. Non-instant outputs output async (for example `FileOutput`), instant outputs output in sync (for example `ConsoleOutput`)
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
+    <dependencies>
+      <dependency id="System.Runtime" version="4.3.1"/>
+    </dependencies>
   </metadata>
 </package>
