--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>2.4.0</version>
+    <version>2.4.1</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,9 +11,8 @@
     <repository type="git" url="https://github.com/habetuz/SharpLog" branch="master"/>
     <description>A small logger for big projects</description>
     <releaseNotes>
-      Change:
-      - dependencies
-      - `IOutputs` differentiate between instant and non-instant outputs. Non-instant outputs output async (for example `FileOutput`), instant outputs output in sync (for example `ConsoleOutput`)
+      Fix:
+      - Instant outputs logging all logging levels (even the disabled ones)
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
