--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>2.4.1</version>
+    <version>2.4.2</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -12,7 +12,7 @@
     <description>A small logger for big projects</description>
     <releaseNotes>
       Fix:
-      - Instant outputs logging all logging levels (even the disabled ones)
+      - Instant outputs logging twice
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
