--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
       - navigation.tabs
       - navigation.top
       - toc.integrate
+      - navigation.instant
   name: material
   palette:
     scheme: slate
