--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>2.4.2</version>
+    <version>2.4.3</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,8 +11,8 @@
     <repository type="git" url="https://github.com/habetuz/SharpLog" branch="master"/>
     <description>A small logger for big projects</description>
     <releaseNotes>
-      Fix:
-      - Instant outputs logging twice
+      Change:
+      - Log levels get printed capitalized
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
