--- a/SharpLog.csproj
+++ b/SharpLog.csproj
@@ -31,18 +31,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Logger.cs" />
-    <Compile Include="LogType.cs" />
-    <Compile Include="MassLogger.cs" />
-    <Compile Include="Output\IOutput.cs" />
-    <Compile Include="Output\ConsoleOutput.cs" />
-    <Compile Include="Output\FileOutput.cs" />
+    <Compile Include="Formatter.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="Logging.cs" />
+    <Compile Include="LogLevel.cs" />
+    <Compile Include="Outputs\ConsoleOutput.cs" />
+    <Compile Include="Outputs\FileOutput.cs" />
+    <Compile Include="Outputs\IOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SettingsManager.cs" />
+    <Compile Include="Settings\Color.cs" />
+    <Compile Include="Settings\Level.cs" />
+    <Compile Include="Settings\LevelContainer.cs" />
+    <Compile Include="Settings\OutputContainer.cs" />
+    <Compile Include="Settings\BaseSettings.cs" />
+    <Compile Include="Settings\Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Runtime">
       <Version>4.3.1</Version>
     </PackageReference>
+    <PackageReference Include="YamlDotNet">
+      <Version>11.2.1</Version>
+    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
