--- a/SharpLog.csproj
+++ b/SharpLog.csproj
@@ -37,7 +37,7 @@
     <Compile Include="LogLevel.cs" />
     <Compile Include="Outputs\ConsoleOutput.cs" />
     <Compile Include="Outputs\FileOutput.cs" />
-    <Compile Include="Outputs\IOutput.cs" />
+    <Compile Include="Outputs\Output.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsManager.cs" />
     <Compile Include="Settings\Color.cs" />
@@ -55,6 +55,8 @@
       <Version>11.2.1</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="sharplog.yml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
