--- a/SharpLog.nuspec
+++ b/SharpLog.nuspec
@@ -2,16 +2,16 @@
 <package>
   <metadata>
     <id>MarvinFuchs.SharpLog</id>
-    <version>3.3.2</version>
+    <version>3.4.1</version>
     <title>$title$</title>
     <authors>Marvin Fuchs</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <projectUrl>https://sharplog.marvin-fuchs.de</projectUrl>
     <repository type="git" url="https://github.com/habetuz/SharpLog" branch="master"/>
-    <description>A small logger for big projects</description>
+    <description>A small logger for big projects.</description>
     <releaseNotes>
-      https://github.com/habetuz/SharpLog/releases/tag/v3.3.2
+      https://github.com/habetuz/SharpLog/releases/tag/v3.4.1
     </releaseNotes>
     <copyright>$copyright$</copyright>
     <tags>Logger</tags>
