--- a/SharpLog.csproj
+++ b/SharpLog.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="spectre.Console" Version="0.46.0" />
     <PackageReference Include="YamlDotNet" Version="13.0.0" />
   </ItemGroup>
   <ItemGroup>
