--- a/sharplog.yml
+++ b/sharplog.yml
@@ -1,55 +1,103 @@
-﻿format: '$D$: $Lp{[}s{]}r{7, }$$Tp{[}s{]}$[$C$->$F$] $M$$Ep{\n}i{   }$$Sp{\n}$'
+﻿format: "$D$: [$L$]$Cp{ [}s{] }$$Tp{ [}s{] }$ $M$$Ep{\nException: }$$Sp{\nStackTrace: }$"
 levels:
   debug:
+    enabled: true
+    format:
     short: "?"
-    enabled: true
-    format: null
   trace:
+    enabled: true
+    format:
     short: "&"
-    enabled: true
-    format: null
   info:
-    short: "+"
     enabled: true
-    format: null
-  warn:
+    format:
+    short: +
+  warning:
+    enabled: true
+    format:
     short: "!"
-    enabled: true
-    format: null
   error:
-    short: "x"
     enabled: true
-    format: null
+    format:
+    short: x
   fatal:
-    short: "X"
     enabled: true
-    format: null
+    format:
+    short: X
 outputs:
-  - type: SharpLog.Outputs.ConsoleOutput
-    levels: null
-    format: null
+  - type: ConsoleOutput
     color_enabled: true
     colors:
-      debug:
-        background: black
-        foreground: darkGray
-      trace:
-        background: black
-        foreground: white
-      info:
-        background: black
-        foreground: green
-      warn:
-        background: black
-        foreground: yellow
-      error:
-        background: black
-        foreground: red
-      fatal:
-        background: red
-        foreground: black
-  - type: SharpLog.Outputs.FileOutput
-    levels: null
-    format: null
+      Debug:
+        background: Black
+        foreground: DarkGray
+      Trace:
+        background: Black
+        foreground: White
+      Info:
+        background: Black
+        foreground: Green
+      Warning:
+        background: Black
+        foreground: Yellow
+      Error:
+        background: Black
+        foreground: Red
+      Fatal:
+        background: Red
+        foreground: Black
+    format:
+    levels:
+  - type: FileOutput
     path: .log
     suspend_time: 500
+    format:
+    levels:
+tags:
+  SHARPLOG_INTERNAL:
+    enabled: true
+    format:
+    levels:
+      debug:
+        enabled: true
+        format:
+        short: "\0"
+      trace:
+        enabled: true
+        format:
+        short: "\0"
+      info:
+        enabled: true
+        format:
+        short: "\0"
+      warning:
+      error:
+      fatal:
+    outputs:
+      - ansi_error_print: true
+        format:
+        levels:
+          debug:
+            enabled: true
+            format: "[bold gray]$La{u}r{11, }p{[[}s{]]}$ - [/]$M$$Sp{\nStackTrace: }$"
+            short: "\0"
+          trace:
+            enabled: true
+            format: "[bold white]$La{u}r{11, }p{[[}s{]]}$ - [/]$M$$Sp{\nStackTrace: }$"
+            short: "\0"
+          info:
+            enabled: true
+            format: "[bold green]$La{u}r{11, }p{[[}s{]]}$ - [/]$M$$Sp{\nStackTrace: }$"
+            short: "\0"
+          warning:
+            enabled: true
+            format: "[bold yellow]$La{u}r{11, }p{[[}s{]]}$ - [/]$M$$Sp{\nStackTrace: }$"
+            short: "\0"
+          error:
+            enabled: true
+            format: "[bold red]$La{u}r{11, }p{[[}s{]]}$ - [/]$M$$Sp{\nStackTrace: }$"
+            short: "\0"
+          fatal:
+            enabled: true
+            format: "[bold white on red]$La{u}r{11, }p{[[}s{]]}$ - [/]$M$$Sp{\nStackTrace: }$"
+            short: "\0"
